Implementacion detalle de producto

--- a/VistaBootstrap.html
+++ b/VistaBootstrap.html
@@ -136,7 +136,7 @@
                     Ubicados en el valle, un lugar magico con una alberca muy
                     limpia ya que el alberquero le sabe.
                   </p>
-                  <a href="#" class="btn btn-primary">More Info</a>
+                  <a href="detalle.html" class="btn btn-primary">More Info</a>
                 </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="detalle.html" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
@@ -164,7 +164,7 @@
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="detalle.html" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
             </div>
